--- a/htdocs/content/themes/goldsmith-mortgages/package.json
+++ b/htdocs/content/themes/goldsmith-mortgages/package.json
@@ -51,6 +51,7 @@
     "smooth-scrollbar": "^8.5.3",
     "swiper": "^6.4.5",
     "vee-validate": "^3.4.5",
+    "vue-i18n": "^8.24.4",
     "vue-panzoom": "^1.1.3",
     "vue-recaptcha": "^1.3.0",
     "vue-recaptcha-v3": "^1.9.0",
